Finished up the introduction.

--- a/introduction.html
+++ b/introduction.html
@@ -297,6 +297,16 @@
             </div>
         </section>
 
+        <section data-background="images/rh-images/rh-bg-light.png" data-background-size="cover" data-background-position="bottom">
+            <div style="width: 1056px; height: 200px; color: white">
+                <img src="images/introduction/image14.png">
+            </div>
+            <div style="width: 1056px; height: 400px; color: white">
+                <h2 style="color: white">A HANDS-ON WORKSHOP</h2>
+                <h5 style="color: white">Become the lead developeer for Destinasia Travel Agency discount rules project, <a href="lab01.html" style="color: red" target="_blank"><b>enter here.</b></a></h5>
+            </div>
+        </section>
+
         <section data-background="images/rh-images/rh-bg-start.png" data-background-size="cover" data-background-position="bottom">
             <div style="width: 1056px; height: 200px; color: white">
                 <h2 style="color: white;">THANK YOU</h2>
@@ -308,14 +318,6 @@
                 <a href="http://schabell.org" style="color: red">http://schabell.org</a>
             </div>
         </section>
-
-        <!--
-        <section data-background="images/rh-images/rh-bg-light.png" data-background-size="cover" data-background-position="bottom">
-            <h2 style="color: white">DETAILED WORKSHOP</h2>
-            <h3><a href="index.html#/3" style="color: red" target="_blank">Destinasia Travel Agency Workshop</a></h3>
-            <h3 style="color: white">DESTINASIA TRAVEL AGENCY (coming soon...)</h3>
-        </section>
-        -->
     </div>
 </div>
 
