--- a/index.html
+++ b/index.html
@@ -92,12 +92,10 @@
                     <div style="width: 100%; height: 220px; color: white">
                             This workshop will get you hands on with installing the OpenShift Container Platform
                             and then deploy 6 containerized services to handle Destinasia Travel Agency booking process.
-                            <br><br>
-                            The following workshops are available for you to build:
                     </div>
                     <div style="width: 100%; height: 100px;">
                         <ul style="color: white">
-                            <li><i><a href="lab01.html" target="_blank" style="color: red">Destinasia Travel Rules Demo - Containers, BRMS, xPaaS, PHP, .NET and JEE</a></i></li>
+                            <li><i><a href="lab01.html" target="_blank" style="color: red"><b>Destinasia Travel Rules Demo - Containers, BRMS, xPaaS, PHP, .NET and JEE</b></a></i></li>
                         </ul>
                     </div>
                 </section>
