Finished up most of lab 01.

--- a/index.html
+++ b/index.html
@@ -99,7 +99,17 @@
                         </ul>
                     </div>
                 </section>
-
+                <section data-background="images/rh-images/rh-bg-start.png" data-background-size="cover" data-background-position="bottom">
+                    <div style="width: 1056px; height: 200px; color: white">
+                        <h2 style="color: white;">THANK YOU</h2>
+                    </div>
+                    <div style="width: 600px; height: 100px; text-align: left; color: white">
+                        Eric D. Schabell<br/>
+                        Global Technology Evangelist Director<br/>
+                        <a href="http://twitter.com/ericschabell" style="color: red" target="_blank">@ericschabell</a><br/>
+                        <a href="http://schabell.org" style="color: red">http://schabell.org</a>
+                    </div>
+                </section>
             </div>
 		</div>
 
