--- a/lab01.html
+++ b/lab01.html
@@ -233,21 +233,74 @@
             </div>
         </section>
 
-
-
+        <section>
+            <div style="width: 1056px; height: 130px;">
+                <h2>WATCHING INSTALL LOG</h2>
+                <h4>OCP image downloaded and installed...</h4>
+            </div>
+            <div style="width: 1056px; height: 600px;">
+                <img src="images/destinasia-workshop/image03.png">
+            </div>
+        </section>
 
         <section>
-            <h2>OCP Users</h2>
-            <ul>
-                <li><strong>Dev</strong> user & password:</li>
-                <ul>
-                    <li><code>openshift-dev  -  devel</code></li>
-                </ul>
-                <li><strong>Admin</strong> users & passwords</li>
-                <ul>
-                    <li><code>admin - admin</code></li>
-                </ul>
-            </ul>
+            <div style="width: 1056px; height: 130px;">
+                <h2>WATCHING INSTALL LOG</h2>
+                <h4>Starting OCP image and getting IP address...</h4>
+            </div>
+            <div style="width: 1056px; height: 600px;">
+                <img src="images/destinasia-workshop/image04.png">
+            </div>
+        </section>
+
+        <section>
+            <div style="width: 1056px; height: 130px;">
+                <h2>WATCHING INSTALL LOG</h2>
+                <h4>Adding JBoss images to OCP...</h4>
+            </div>
+            <div style="width: 1056px; height: 600px;">
+                <img src="images/destinasia-workshop/image05.png">
+            </div>
+        </section>
+
+        <section>
+            <div style="width: 1056px; height: 130px;">
+                <h2>WATCHING INSTALL LOG</h2>
+                <h4>Adding integration, S2I and decision server images to OCP...</h4>
+            </div>
+            <div style="width: 1056px; height: 600px;">
+                <img src="images/destinasia-workshop/image06.png">
+            </div>
+        </section>
+
+        <section>
+            <div style="width: 1056px; height: 130px;">
+                <h2>WATCHING INSTALL LOG</h2>
+                <h4>Refreshing RHEL images to OCP...</h4>
+            </div>
+            <div style="width: 1056px; height: 600px;">
+                <img src="images/destinasia-workshop/image07.png">
+            </div>
+        </section>
+
+        <section>
+            <div style="width: 1056px; height: 130px;">
+                <h2>WATCHING INSTALL LOG</h2>
+                <h4>Adding .Net images to OCP...</h4>
+            </div>
+            <div style="width: 1056px; height: 300px;">
+                <img src="images/destinasia-workshop/image08.png">
+            </div>
+        </section>
+
+        <section>
+            <div style="width: 1056px; height: 130px;">
+                <h2>WATCHING INSTALL LOG</h2>
+                <h4>Final output with details to log in, note clean up commands....</h4>
+            </div>
+            <div style="width: 1056px; height: 600px;">
+                <img src="images/destinasia-workshop/image09.png">
+            </div>
         </section>
 
         <section>
@@ -262,16 +315,22 @@
         </section>
 
         <section>
-            <img src="images/destinasia-workshop/image03.png">
+            <img src="images/destinasia-workshop/image10.png">
         </section>
 
         <section>
-            <img src="images/destinasia-workshop/image04.png">
+            <div style="width: 1056px; height: 100px;">
+                <h2>END LAB 1</h2>
+            </div>
+            <div style="width: 1056px; height: 500px;">
+                <img style="border: 2px solid black" src="images/destinasia-workshop/image11.png">
+            </div>
+
         </section>
 
         <section>
             <div style="width: 1056px; height: 200px; color: white">
-                <h2>THANK YOU</h2>
+                <h2>QUESTIONS?</h2>
             </div>
             <div style="width: 600px; height: 100px; text-align: left">
                 Eric D. Schabell<br/>
