Addeing work for lab 02.

--- a/lab01.html
+++ b/lab01.html
@@ -64,8 +64,18 @@
         </section>
 
         <section>
+            <div style="width: 1056px; height: 130px;">
+                <h2>ARCHITECTURE</h2>
+                <h4>Destinasia service deployment overview</h4>
+            </div>
+            <div style="width: 1056px; height: 600px;">
+                <img src="images/destinasia-workshop/image12.png">
+            </div>
+        </section>
+
+        <section>
             <h2>Lab 1</h2>
-            <h3>Install OpenShift Container Platform</h2>
+            <h3>Install OpenShift Container Platform</h3>
         </section>
 
         <section>
@@ -75,6 +85,16 @@
             </div>
             <div style="width: 1056px; height: 600px;">
                 <img src="images/destinasia-workshop/image01.png">
+            </div>
+        </section>
+
+        <section>
+            <div style="width: 1056px; height: 130px;">
+                <h2>ARCHITECTURE</h2>
+                <h4>Installing OpenShift Container Platform</h4>
+            </div>
+            <div style="width: 1056px; height: 600px;">
+                <img src="images/destinasia-workshop/image13.png">
             </div>
         </section>
 
