Changed oc client version check message.

--- a/lab01.html
+++ b/lab01.html
@@ -238,7 +238,7 @@
                 <br>
                 <ul>
                     <li><i><code>OpenShift command line tools installed... checking for valid version...</code></i></li>
-                    <li>Version of installed OpenShift command line tools is vX.X.X, must be v3.4.1 or higher...
+                    <li>Version of installed OpenShift command line tools is vX.X.X, must be v3.x.x or higher...
                         Download for Mac/Linux/Windows here:
                         <a href="https://drive.google.com/open?id=0B9WSViV5BZ4aVXV5U3F4LVVmWVk" style="color: red"
                            target="_blank">https://drive.google.com/open?id=0B9WSViV5BZ4aVXV5U3F4LVVmWVk</a></code></i></li>
